<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.software_force.myinvoice.InvoiceEditActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/invoice_date" android:textSize="@dimen/text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/invoiceDate" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/invoiceDate"
            android:layout_alignBottom="@id/invoiceDate"
            android:id="@+id/selectInvoiceDate"
            android:src="@drawable/ic_action_schedule"
            android:contentDescription="@string/select_date"
            android:cropToPadding="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:text="@string/invoice_member" android:textSize="@dimen/text_size" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/member" />
    <TableLayout
        android:id="@+id/invoice_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView android:text="@string/item_code" android:textSize="@dimen/text_size" android:paddingTop="10dp" android:textColor="@color/colorHeaderText" />
            <TextView android:text="@string/item_description"  android:textSize="@dimen/text_size" android:paddingTop="10dp"  android:textColor="@color/colorHeaderText"/>
            <TextView android:text="@string/item_price"  android:textSize="@dimen/text_size" android:paddingTop="10dp"  android:textColor="@color/colorHeaderText"/>
            <TextView android:text="@string/item_qty"  android:textSize="@dimen/text_size" android:paddingTop="10dp"  android:textColor="@color/colorHeaderText"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
